Add copy to women's rights issue

--- a/src/app/pages/issues/women/women.html
+++ b/src/app/pages/issues/women/women.html
@@ -3,8 +3,68 @@
     <article>
         <h1>Women's Rights</h1>
 
+        <h2>Health Care</h2>
+
         <p>
-            Coming Soon...
+            Donald Trump's victory in 2016 and the subsequent Supreme Court nominations
+            he makes may put the health of millions of women and young girls at grave
+            risk.
+        </p>
+
+        <p>
+            Women may soon <a href="http://www.vox.com/2016/11/10/13578550/trump-obamacare-birth-control-iuds">lose access to affordable preventive health care</a>, and their Right to choose
+            may be taken away for the first time since 1973.
+        </p>
+
+        <p>
+            A woman's medical decisions should be between her, her family, and her doctor,
+            not politicians.
+        </p>
+
+        <p>
+            Whatever happens at the national level, we must ensure that women in Maryland
+            continue to have affordable access to preventive care and the best health care
+            in the country, and that they always retain full control over their own bodies.
+        </p>
+
+        <h2>Equal Pay</h2>
+
+        <p>
+            The <a href="https://blog.dol.gov/2016/07/04/equal-pay-for-equal-work-in-maryland/">Equal Pay for Equal Work Act</a> went into effect in October 2016 and represents a significant step
+            in ensuring pay equality and ending wage discrimination on the basis of gender.
+        </p>
+
+        <p>
+            Significant work still remains though in eliminating the wage gap, including
+            educating Marylanders about their rights, eliminating the taboo against
+            discussing wages which only benefits employers, and working to close the wage gap
+            for women of color in particular who have been most affected by wage
+            discrimination.
+        </p>
+
+        <h2>Paid Family Leave</h2>
+
+        <p>
+            Too many parents are forced to leave their babies to go back to work only
+            days after they are born — a time that is critical both for new parents
+            to gain confidence with their babies and for children to bond with their parents.
+        </p>
+
+        <p>
+            <a href="http://www.politifact.com/truth-o-meter/statements/2016/jul/25/kirsten-gillibrand/yes-us-only-industrialized-nation-without-paid-fam/">Every other developed nation on Earth offers guaranteed paid leave</a>, because they recognize that supporting families
+            isn't a luxury — it's an economic necessity.
+        </p>
+
+        <p>
+            As the richest State in the wealthiest nation in the world, we can and should
+            do much better. We can:
+            <ul>
+                <li>Guarantee 12 weeks of paid family and medical leave, and</li>
+                <li>Ensure paid leave matches at least two-thirds of pay, up to a ceiling</li>
+            </ul>
+            And we can do both at no additional cost on businesses by adapting Senator Gillibrand's
+            <a href="https://www.gillibrand.senate.gov/issues/paid-family-medical-leave">FAMILY Act</a>
+            to Maryland.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
