Add UN automation report to UBI issue

--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -8,6 +8,15 @@
         </p>
 
         <p>
+            Automation is set to potentially <a href="http://unctad.org/en/PublicationsLibrary/presspb2016d6_en.pdf">replace two-thirds of jobs</a> in the coming years. And the trend doesn't just impact manufacturing: people working in industries ranging from transportation to retail to health care could
+            all <a href="http://money.cnn.com/2016/11/17/technology/trump-tech-populism-automation/index.html">see their jobs vanish</a>.
+        </p>
+
+        <p>
+            The idea of a Universal Basic Income has been endorsed by numerous Nobel laureates in Economics, including Milton Friedman, Paul Samuelson, and James Tobin, as well as a veritable army of other well-respected economists. It's an idea that has seen support across the <a href="http://www.theatlantic.com/politics/archive/2014/08/why-arent-reformicons-pushing-a-guaranteed-basic-income/375600/">political</a> and <a href="http://www.wsj.com/articles/a-guaranteed-income-for-every-american-1464969586">ideological</a> spectrum, famously <a href="https://www.jacobinmag.com/2016/05/richard-nixon-ubi-basic-income-welfare/">nearly becoming a reality under President Richard Nixon</a>.
+        </p>
+
+        <p>
             In his final book, <cite>Where Do We Go From Here: Chaos or Community?</cite>, Martin Luther King, Jr. made a powerful case for a guaranteed income:
         </p>
 
@@ -34,10 +43,6 @@
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/BY1OKSObkH0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
-
-        <p>
-            The idea of a Universal Basic Income has been endorsed by numerous Nobel laureates in Economics, including Milton Friedman, Paul Samuelson, and James Tobin, as well as a veritable army of other well-respected economists. It's an idea that has seen support across the <a href="http://www.theatlantic.com/politics/archive/2014/08/why-arent-reformicons-pushing-a-guaranteed-basic-income/375600/">political</a> and <a href="http://www.wsj.com/articles/a-guaranteed-income-for-every-american-1464969586">ideological</a> spectrum, famously <a href="https://www.jacobinmag.com/2016/05/richard-nixon-ubi-basic-income-welfare/">nearly becoming a reality under President Richard Nixon</a>.
-        </p>
 
         <p>
             <strong>The idea is so simple as to almost be absurd: to eliminate poverty, give people money.</strong>
