Add quote to women's rights issue

--- a/src/app/pages/issues/women/women.html
+++ b/src/app/pages/issues/women/women.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Women's Rights</h1>
 
+        <blockquote class="issue">
+            We ask justice, we ask equality, we ask that all the civil and political rights that belong to citizens of the United States, be guaranteed to us and our daughters forever.<br>
+            — Susan B. Anthony
+        </blockquote>
+
         <h2>Health Care</h2>
 
         <p>
