Use text-align justify in articles

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -4,6 +4,10 @@
 .home-page {
     text-align: center;
 
+    h1 {
+        text-align: center;
+    }
+
     > .banner {
         background-image: url('/images/banners/home.jpg');
         margin-left: -17rem;
