--- a/src/app/pages/map/map.scss
+++ b/src/app/pages/map/map.scss
@@ -6,6 +6,10 @@
     padding: 0 2rem;
     text-align: center;
 
+    h1 {
+        text-align: center;
+    }
+
     form {
         margin-bottom: 3rem;
     }
