--- a/src/styles/components/issue-blocks.scss
+++ b/src/styles/components/issue-blocks.scss
@@ -9,6 +9,11 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    text-align: center;
+
+    h2 {
+        margin-bottom: 0;
+    }
 
     img {
         height: auto;
