--- a/src/styles/components/pages.scss
+++ b/src/styles/components/pages.scss
@@ -7,6 +7,7 @@
     > article {
         margin: 0 auto;
         max-width: 80rem;
+        text-align: justify;
 
         @media (max-width: 889px) {
             max-width: 90%;
