Add religious freedom copy

--- a/src/app/pages/issues/religion/religion.html
+++ b/src/app/pages/issues/religion/religion.html
@@ -3,8 +3,41 @@
     <article>
         <h1>Religious Freedom</h1>
 
+        <blockquote class="issue">
+            If you want others to be happy, practice compassion. If you want to be happy, practice compassion.<br>
+            — Dalai Lama
+        </blockquote>
+
         <p>
-            Coming Soon...
+            American exceptionalism lies in the idea that peoples of every
+            race, color, religion, and creed can come together to form a single,
+            united State. Whether you carry a kirpan, face Mecca to pray, or wear
+            a kippah, you possess a liberty of conscience and immunity of
+            citizenship enjoyed by all Americans, regardless of faith.
+        </p>
+
+        <p>
+            If this great experiment we call the United States is to succeed,
+            toleration and compassion cannot be indulgences afforded to only some.
+        </p>
+
+        <p>
+            The events of the past year, and indeed for most of this young millennium,
+            have challenged our ideals and given a voice to the simplicity of
+            bigotry and intolerance.
+        </p>
+
+        <p>
+            We must all come together as a single united people to give bigotry no
+            sanction and persecution no assistance. We must recognize that when
+            our fellow citizens are threatened and terrorized, we are threatened
+            and terrorized.
+        </p>
+
+        <p>
+            For when we allow any freedom born of the individual liberty of conscience
+            guaranteed by our Constitution to be undermined, we allow the idea of America
+            itself to be undermined.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
