Add quote to UBI issue

--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Universal Basic Income</h1>
 
+        <blockquote class="issue">
+            I care not how affluent some may be, provided that none be miserable in consequence of it.<br>
+            — Thomas Paine
+        </blockquote>
+
         <p>
             Many names have been given to the idea — Universal Basic Income, Negative Income Tax, Citizen's Wage — the idea is not a new one, but it is an idea whose time has come.
         </p>
