Add Religious Freedom to Equality issue group

--- a/src/app/pages/issues/equality/equality.html
+++ b/src/app/pages/issues/equality/equality.html
@@ -12,16 +12,16 @@
             </li>
 
             <li>
-                <a href="/issues/women">
-                    <h2>Women's Rights</h2>
-                    <img src="/images/issues/icons/venus.svg" alt="" width="170" height="170">
+                <a href="/issues/religion">
+                    <h2>Religious Freedom</h2>
+                    <img src="/images/issues/icons/human.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
-                <a href="/issues/healthcare">
-                    <h2>Universal Healthcare</h2>
-                    <img src="/images/issues/icons/healthcare.svg" alt="" width="170" height="170">
+                <a href="/issues/women">
+                    <h2>Women's Rights</h2>
+                    <img src="/images/issues/icons/venus.svg" alt="" width="170" height="170">
                 </a>
             </li>
         </ul>
