Add 'Q' to 'LGBTQ' in Equality issue group

--- a/src/app/pages/issues/equality/equality.html
+++ b/src/app/pages/issues/equality/equality.html
@@ -6,7 +6,7 @@
         <ul class="issue-blocks">
             <li>
                 <a href="/issues/lgbt">
-                    <h2>LGBT Rights</h2>
+                    <h2>LGBTQ Rights</h2>
                     <img src="/images/issues/icons/rainbow.svg" alt="" width="170" height="170">
                 </a>
             </li>
