Use scale of justice in place of fist icon

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -34,8 +34,8 @@
 
             <li>
                 <a href="/issues/justice">
-                    <h2>Social Justice</h2>
-                    <img src="/images/issues/icons/fist.svg" alt="A new social contract for our justice system" width="170" height="170">
+                    <h2>Justice For All</h2>
+                    <img src="/images/issues/icons/justice.svg" alt="A new social contract for our justice system" width="170" height="170">
                 </a>
             </li>
 
