--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Social Justice</h1>
+        <h1>Criminal Justice Reform</h1>
 
         <p>
             Social Justice Contract...
