Add Education issue copy

--- a/src/app/pages/issues/education/education.html
+++ b/src/app/pages/issues/education/education.html
@@ -3,8 +3,83 @@
     <article>
         <h1>Education</h1>
 
+        <h2>Free Public College</h2>
+
         <p>
-            Coming Soon...
+            A college education has immense benefits for individuals and for
+            society as a whole. Students who graduate from college on average
+            earn significantly higher incomes, contribute more in taxes
+            back to their communities, and even <a href="https://www.luminafoundation.org/files/resources/its-not-just-the-money.pdf">live longer and are happier</a>.
+        </p>
+
+        <p>
+            But despite the huge economic advantages that communities reap
+            from having a high percentage of college graduates, we are
+            increasingly putting more and more of the burden of paying
+            for college on our children.
+        </p>
+
+        <img src="/images/issues/education/studentloanshomeownership.png">
+
+        <p>
+            Home ownership has been falling among Millennials over the past
+            decade while <a href="https://www.bostonglobe.com/magazine/2016/05/18/hopes-dreams-debt/fR60cKakwUlGok0jTlONTN/story.html">student debt has more than tripled</a>
+            to $1.23 trillion over the same time period.
+        </p>
+
+        <p>
+            Young people today spend <a href="http://studentdebtcrisis.org/young-people-spend-one-fifth-income-student-loan-payments/">20% of
+            their income on repaying student loans</a>, and 60% of Millennials
+            now expect to be paying back student loans well into their 40s.
+        </p>
+
+        <p>
+            This situation is creating a long-term cost both for millions of young
+            people, as well as for our entire economy. Student loans are draining
+            new workers of disposable income, causing them to spend less,
+            and cutting off the most important driver of growth.
+        </p>
+
+        <p>
+            In a highly competitive global economy, we cannot afford to not have
+            the best educated workforce in the world.
+        </p>
+
+        <p>
+            It is long past time to make public college in Maryland tuition free
+            for any student graduating from a Maryland High School.
+        </p>
+
+        <h2>School Funding</h2>
+
+        <p>
+            The Bridge to Excellence in Public Schools Act, passed in 2002, has
+            helped provide historic levels of funding to public schools here in Maryland,
+            and helped turn our public education system into one of the best in
+            the country.
+        </p>
+
+        <p>
+            It should be no surprise that States that invest more in education
+            have better schools and produce better results, but new studies have
+            shown that <a href="http://www.nber.org/papers/w20118">there is significant
+            return on investment that benefits the entire community</a>.
+        </p>
+
+        <p>
+            Despite the successes though, Maryland ranks near the bottom of all states
+            for funding poor districts and affluent districts evenly. In order to
+            address this gap, the General Assembly created the <a href="http://www.marylandeducators.org/sites/default/files/docs/ms-060-white-paper-2016_r2.1.pdf">Thornton II Commission</a>,
+            which will recommend a new funding formula by the 2018 General Assembly session.
+        </p>
+
+        <p>
+            The recommendations of the Thornton II Commission should be adopted
+            if they make our school funding more equitable. Furthermore, we should
+            increase our education funding so that no district sees its funding
+            decrease due to the new formula, but rather we bring all districts
+            up to the same levels of funding and excellence that our best
+            schools currently enjoy.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
