--- a/src/app/pages/issues/education/education.scss
+++ b/src/app/pages/issues/education/education.scss
@@ -4,6 +4,12 @@
 .issues_education-page {
     margin-bottom: 6rem;
 
+    img {
+        display: block;
+        margin: 0 auto;
+        width: 90%;
+    }
+
     > .banner {
         background-image: url('/images/banners/education.jpg');
     }
