Add Education issue quote

--- a/src/app/pages/issues/education/education.html
+++ b/src/app/pages/issues/education/education.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Education</h1>
 
+        <blockquote class="issue">
+            An investment in knowledge pays the best dividends.<br>
+            — Benjamin Franklin
+        </blockquote>
+
         <h2>Free Public College</h2>
 
         <p>
