Add Criminal Justice Reform issue copy

--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -3,10 +3,145 @@
     <article>
         <h1>Criminal Justice Reform</h1>
 
+        <h2>Black Lives Matter</h2>
+
         <p>
-            Social Justice Contract...
-            Peelian Principles
-            Make Parallel Construction illegal
+            People who identify as black or African American make up about
+            15.5% of the population in Anne Arundel County, <a href="http://baltimore.cbslocal.com/2016/11/20/aclu-report-on-race-and-traffic-stops-in-maryland/">but they account
+            for 29% of all traffic stops and 35% of police searches</a>.
+        </p>
+
+        <p>
+            In Maryland, a black person is almost 5 times more likely to be
+            incarcerated than a white person.
+        </p>
+
+        <img src="/images/issues/justice/incarceration-rates.jpg" alt="Incarceration rates by race in Maryland">
+
+        <p>
+            Communities that experience disproportionate incarceration rates
+            <a href="http://www.pewtrusts.org/~/media/legacy/uploadedfiles/pcs_assets/2010/collateralcosts1pdf.pdf">suffer profound intergenerational consequences.
+        </p>
+
+        <p>
+            Such drastically disproportionate results can only be the result
+            of systemic issues in our economic and criminal justice systems,
+            and it is both morally imperative and socially and economically sensible
+            to end the rampant and destructive racism.
+        </p>
+
+        <p>
+            <strong>Unfortunately, our current District 32 delegates have repeatedly shown
+            that they are unwilling to stand up for racial equality and justice.</strong>
+        </p>
+
+        <p>
+            Delegates Mark Chang and Ted Sophocleus both <a href="http://openstates.org/md/votes/MDV00019608/">voted against</a> legislation that authorized people to have convictions which
+            are longer considered crimes to be expunged from their record — convictions
+            that overwhelmingly targeted people of color. The legislation was so
+            popular it passed unanimously in the Senate and was opposed by only two
+            other Democrats in the entire House!
+        </p>
+
+        <p>
+            All three of our delegates <a href="http://openstates.org/md/votes/MDV00020673/">voted
+            against</a> reducing mandatory minimum sentencing for drug offenses — only 3 other
+            Democrats in the House joined them in opposition (83 voted in favor).
+        </p>
+
+        <p>
+            Delegates Chang and Sophocleus <a href="http://openstates.org/md/votes/MDV00020141/">voted
+            against</a> returning voting rights to felons who served their time and were released —
+            only 4 other Democrats in the House joined them.
+        </p>
+
+        <p>
+            If our Delegates lack the courage to stand up for reform when it is
+            overwhelmingly popular, how will they ever have the courage to stand
+            up for the rights of all Marylanders when it isn't?
+        </p>
+
+        <h2>Judicial Reform</h2>
+
+        <h3>Bail</h3>
+
+        <p>
+            Bail plays a large but not well known role in mass incarceration in Maryland.
+        </p>
+
+        <p>
+            Pretrial detainees make up roughly 20% of our prison population, and, as
+            <a href="http://thedailyrecord.com/2016/11/17/bail-reform-symposium/">explained</a>
+            by Maryland Public Defender Paul B. DeWolfe, \"In practice, amounts of [bail] money
+            are (selected) randomly.\"
+        </p>
+
+        <p>
+            Maryland judicial officers should be required to <a href="http://www.baltimoresun.com/news/opinion/oped/bs-ed-bail-rules-20161116-story.html">set bail prices at levels
+            that defendants can reasonably afford</a>.
+        </p>
+
+        <h3>Public Defenders</h3>
+
+        <p>
+            Public Defenders juggle <a href="http://www.baltimoresun.com/news/maryland/investigations/bs-md-public-defender-caseloads-20160819-story.html">impossibly large case
+            loads</a> as they are being asked to represent literally hundreds of clients beyond
+            what legal experts say is possible to provide effective legal representation.
+        </p>
+
+        <p>
+            The lack of Public Defenders puts people who can't afford legal representation
+            at a significant disadvantage in our legal system, and all too often
+            <a href="http://www.nybooks.com/articles/2014/11/20/why-innocent-people-plead-guilty/">leads
+            to innocent people pleading guilty</a>.
+        </p>
+
+        <p>
+            We need to increase funding to immediately hire an additional 150 Public Defenders.
+        </p>
+
+        <h2>Law Enforcement Reform</h2>
+
+        <h3>Policing By Consent</h3>
+
+        <p>
+            American police forces have slowly moved away from the original <a href="https://en.wikipedia.org/wiki/Peelian_principles">Peelian Principles</a> upon which they originally based their practices.
+            These Principles are largely uncontroversial among the public at large:
+
+            <ul>
+                <li>
+                    To recognize always that the power of the police to fulfill their functions and duties is dependent on public approval of their existence, actions and behavior, and on their ability to secure and maintain public respect.
+                </li>
+                <li>
+                    To recognize always that to secure and maintain the respect and approval of the public means also the securing of the willing co-operation of the public in the task of securing observance of laws.
+                </li>
+                <li>
+                    To recognize always that the extent to which the co-operation of the public can be secured diminishes proportionately the necessity of the use of physical force and compulsion for achieving police objectives.
+                </li>
+                <li>
+                    To seek and preserve public favor, not by pandering to public opinion, but by constantly demonstrating absolutely impartial service to law, in complete independence of policy, and without regard to the justice or injustice of the substance of individual laws, by ready offering of individual service and friendship to all members of the public without regard to their wealth or social standing, by ready exercise of courtesy and friendly good humor, and by ready offering of individual sacrifice in protecting and preserving life.
+                </li>
+                <li>
+                    To use physical force only when the exercise of persuasion, advice and warning is found to be insufficient to obtain public co-operation to an extent necessary to secure observance of law or to restore order, and to use only the minimum degree of physical force which is necessary on any particular occasion for achieving a police objective.
+                </li>
+                <li>
+                    To maintain at all times a relationship with the public that gives reality to the historic tradition that the police are the public and that the public are the police, the police being only members of the public who are paid to give full-time attention to duties which are incumbent on every citizen in the interests of community welfare and existence.
+                </li>
+                <li>
+                    To recognize always that the test of police efficiency is the absence of crime and disorder, and not the visible evidence of police action in dealing with them.
+                </li>
+            </ul>
+        </p>
+
+        <p>
+            The militarization of our police forces and the seemingly daily stream of videos
+            showing excessive use of force by police are evidence that we have forgotten
+            the above principles and ignored the consequences.
+        </p>
+
+        <p>
+            We must work to demilitarize our police forces, increase training for police to
+            emphasize deescalation, and create a force that internalizes the above principles.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
