Add quote to Criminal Justice Reform issue

--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Criminal Justice Reform</h1>
 
+        <blockquote class="issue">
+            Where justice is denied, where poverty is enforced, where ignorance prevails, and where any one class is made to feel that society is an organized conspiracy to oppress, rob and degrade them, neither persons nor property will be safe.<br>
+            — Frederick Douglass
+        </blockquote>
+
         <h2>Black Lives Matter</h2>
 
         <p>
