Add Publicly Funded Elections to Modern Elections

--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -8,6 +8,20 @@
             — Unknown
         </blockquote>
 
+        <h2>Publicly Funded Elections</h2>
+
+        <p>
+            Big money in politics has become a big problem, and it's time to start
+            taking power away from large donors and corporations and giving it
+            back to all citizens.
+        </p>
+
+        <p>
+            Learn about how we can fight back against corruption in politics
+            and finance free and fair elections in
+            <a href="/issues/corruption">Money in Politics</a>.
+        </p>
+
         <h2>Automatic Voter Registration</h2>
 
         <p>
@@ -63,6 +77,11 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3Y3jE3B8HsE" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+
+        <p>
+            In 2016, Maine <a href="http://www.slate.com/articles/business/moneybox/2016/11/maine_just_passed_ranked_choice_voting_bravo.html">became the first state</a>
+            to adopt Instant Runoff Voting.
+        </p>
 
         <h2>Blockchain Voting</h2>
 
