Add Universal Healthcare copy

--- a/src/app/pages/issues/healthcare/healthcare.html
+++ b/src/app/pages/issues/healthcare/healthcare.html
@@ -1,10 +1,43 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Universal Healthcare</h1>
+        <h1>Universal Health Insurance</h1>
 
         <p>
-            Universal Healthcare...
+            Medical bills are the leading cause of bankruptcy in the United
+            States, outnumbering <em>all other causes combined</em>. More than
+            25% of all adults have said that <a href="http://www.npr.org/sections/health-shots/2016/03/08/468892489/medical-bills-still-take-a-big-toll-even-with-insurance">health care costs have caused a
+            serious financial problem</a>. Additionally, 240,000 Marylanders still lack
+            any type of health insurance.
+        </p>
+
+        <p>
+            Universal Health<em>care</em> would be the ideal solution to health care;
+            however, as Colorado's <a href="http://www.coloradoindependent.com/162305/coloradocare-amendment-69">brief flirtation</a> with ColoradoCare showed, implementing universal healthcare
+            at the state level comes with additional complications that can only
+            be avoided by implementing it at a national level.
+        </p>
+
+        <p>
+            Universal Health <em>Insurance</em>, on the other hand, is a much more
+            manageable step that would be relatively inexpensive to implement,
+            but would help to reduce the number of bankruptcies due to medical bills —
+            and make Maryland the first state to provide 100% of residents at least
+            some level of health care coverage.
+        </p>
+
+        <p>
+            By providing all Marylander's with Catastrophic Health Insurance, we can
+            provide full coverage for anyone whose health care costs exceed a percentage
+            of their incomes.
+        </p>
+
+        <p>
+            Employer-provided insurance, Medicaid, Medicare, and plans
+            bought through the Maryland Health Connection would continue to be the norm
+            for everyday medical expenditures, but unexpected and unpredictable
+            health care costs would no longer leave families with impossible-to-pay
+            medical bills.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
