Add Evidence-Based Policy copy

--- a/src/app/pages/issues/policy/policy.html
+++ b/src/app/pages/issues/policy/policy.html
@@ -3,8 +3,15 @@
     <article>
         <h1>Evidence-based Policies</h1>
 
+        <blockquote class="issue">
+            Everything must be taken into account. If the fact will not fit the theory — let the theory go.<br>
+            — Agatha Christie
+        </blockquote>
+
         <p>
-            Evidence-based Policies...
+            The concept of evidence-based policies has broad support across
+            political lines and is widely supported by voters, yet implementation
+            remains half-hearted at best.
         </p>
 
         <div class="youtube-video-wrapper">
@@ -12,6 +19,52 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+
+        <p>
+            In 2016, the General Assembly passed a $42 billion budget, but we have
+            limited capacity to evaluate the effectiveness of that spending.
+        </p>
+
+        <p>
+            Agencies are asked to submit a <a href="http://dbm.maryland.gov/budget/Documents/operbudget/2017-instructions/sect4-03.pdf">Performance Discussion</a> on the past year;
+            however, the requirements for the findings and data are left largely
+            to the agency's discretion, and are not required to be scientifically
+            rigorous.
+        </p>
+
+        <p>
+            Instead, spending is often driven by idealogical beliefs, and data is found
+            to support whatever side of the argument one prefers.
+        </p>
+
+        <p>
+            Requirements for scientifically valid evidence should be built into
+            performance standards.
+        </p>
+
+        <h2>Require Agencies to Justify Funding Requests with Research</h2>
+
+        <p>
+            Gradually phase in requirements that agencies justify requests
+            for additional resources with evidence that additional resources would
+            produce positive results.
+        </p>
+
+        <h2>Embed Evidence Requirements in Agency Contracts</h2>
+
+        <p>
+            Contract processes should incentivize research and evidence-based programs
+            by either mandating programs include an evidence-based model and oversight,
+            or by giving preference to programs that do.
+        </p>
+
+        <h2>End Funding for Ineffective Programs</h2>
+
+        <p>
+            Programs that fail to meet specified goals should have their funding
+            reduced or ended in order to allow for increased funding on programs
+            that do work or to save taxpayers money.
+        </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
