Add Money in Politics issue copy

--- a/src/app/pages/issues/corruption/corruption.html
+++ b/src/app/pages/issues/corruption/corruption.html
@@ -3,8 +3,23 @@
     <article>
         <h1>Money in Politics</h1>
 
+        <blockquote class="issue">
+            Our country is now taking so steady a course as to show by what road it will pass to destruction, to wit: by consolidation of power first, and then corruption, its necessary consequence.<br>
+            — Thomas Jefferson
+        </blockquote>
+
         <p>
-            Coming Soon...
+            Do you know the maximum individual donation for a State or Local
+            candidate in Maryland is <strong>$6000</strong>? That's more than double what you
+            can donate to someone running for President, and <a href="http://www.ncsl.org/Portals/1/documents/legismgt/elect/ContributionLimitstoCandidates2015-2016.pdf">ranks among the highest
+            in the country</a>.
+        </p>
+
+        <p>
+            That means only a small handful of people can fully fund a campaign
+            for State Legislature, County Council, or any other elected position,
+            making it cheap and legal to buy influence over our elected officials —
+            yes, corruption is legal in Maryland.
         </p>
 
         <div class="youtube-video-wrapper">
@@ -12,6 +27,62 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+
+        <h2>Get Big Money Out of Politics</h2>
+
+        <p>
+            Campaigns should be reliant on building broad support among their
+            constituents, not on building narrow support among a small group of
+            wealthy donors.
+        </p>
+
+        <p>
+            The maximum individual contribution should be reduced from its currently
+            ludicrous amount of $6000 down to $575 for a statewide candidate and $200
+            for a local or legislative candidate. Additionally, donations to campaigns
+            from corporations should be prohibited.
+        </p>
+
+        <p>
+            That would put our contribution limits in line with some of the lowest
+            in the country, matching Colorado.
+        </p>
+
+        <h2>Fair Elections</h2>
+
+        <p>
+            Too often, \"campaigning\" today doesn't mean engaging with the public,
+            it means meeting with and calling large donors to ask for money. And
+            those meetings don't begin when you start seeing political ads — they've
+            been out <a href="https://www.washingtonpost.com/news/wonk/wp/2013/01/14/the-most-depressing-graphic-for-members-of-congress/">raising money four or more hours a day</a>,
+            every day, for their entire term in office.
+        </p>
+
+        <p>
+            When election season gets close, elected officials commonly spend
+            70 to 80 percent of their time just asking for money.
+        </p>
+
+        <p>
+            The reason they do so is simple — it works. The campaign that raises the
+            most money tends to win, it's that simple.
+        </p>
+
+        <p>
+            We need to break that cycle by decreasing the emphasis on large donors
+            and shifting it instead to small donors.
+        </p>
+
+        <p>
+            Reducing maximum campaign contribution limits is an important step, but
+            we can also <a href="http://www.baltimoresun.com/news/maryland/howard/columbia/ph-ho-cf-citizen-funded-campaign-launch-0818-20160817-story.html">amplify the
+            power of small donors</a> by providing matching public financing for campaigns
+            that agree to keep spending under a given cap for their race.
+        </p>
+
+        <p>
+            <strong>Elections should be about ideas, not fundraising.</strong>
+        </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
