Re-position bench banner image on large screens

--- a/src/app/pages/issues/gerrymandering/gerrymandering.scss
+++ b/src/app/pages/issues/gerrymandering/gerrymandering.scss
@@ -11,5 +11,9 @@
 
     > .banner {
         background-image: url('/images/banners/bench.jpg');
+
+        @media (min-width: 1500px) {
+            background-position: center 25%;
+        }
     }
 }
