--- a/src/app/pages/news/news.scss
+++ b/src/app/pages/news/news.scss
@@ -4,6 +4,10 @@
 .news-page {
     > .banner {
         background-image: url('/images/banners/bench.jpg');
+
+        @media (min-width: 1500px) {
+            background-position: center 25%;
+        }
     }
 
     .press-release {
