--- a/src/app/pages/privacy/privacy.scss
+++ b/src/app/pages/privacy/privacy.scss
@@ -4,6 +4,10 @@
 .privacy-page {
     > .banner {
         background-image: url('/images/banners/bench.jpg');
+
+        @media (min-width: 1500px) {
+            background-position: center 25%;
+        }
     }
 
     .dnt-info {
