--- a/src/app/pages/issues/guns/guns.scss
+++ b/src/app/pages/issues/guns/guns.scss
@@ -6,5 +6,9 @@
 
     > .banner {
         background-image: url('/images/banners/bench.jpg');
+
+        @media (min-width: 1500px) {
+            background-position: center 25%;
+        }
     }
 }
