--- a/src/app/pages/issues/wages/wages.scss
+++ b/src/app/pages/issues/wages/wages.scss
@@ -7,5 +7,9 @@
 
     > .banner {
         background-image: url('/images/banners/bench.jpg');
+
+        @media (min-width: 1500px) {
+            background-position: center 25%;
+        }
     }
 }
